--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
     <link rel="apple-touch-icon" href="assets/img/kit/free/apple-icon.png">
     <link rel="icon" href="assets/img/kit/free/favicon.png">
     <title>
-        Landing &#45; Material Kit by Creative Tim
+        NeonProjects &#45; Your Preferred Technology Partner
     </title>
     <!--     Fonts and icons     -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
     <link rel="stylesheet" href="assets/css/material-kit.css?v=2.0.2">
     <!-- Documentation extras -->
-    <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link href="assetsassets-for-demo/demo.css" rel="stylesheet" />
+
     <!-- iframe removal -->
 </head>
 
@@ -25,7 +24,7 @@
     <nav class="navbar navbar-color-on-scroll navbar-transparent    fixed-top  navbar-expand-lg " color-on-scroll="100" id="sectionsNav">
         <div class="container">
             <div class="navbar-translate">
-                <a class="navbar-brand" href="../index.html">Material Kit </a>
+                <a class="navbar-brand" href="#"><b style="font-size: 200%">NeonProjects </b></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     <span class="navbar-toggler-icon"></span>
@@ -47,7 +46,7 @@
                             </a>
                         </div>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="javascript:void(0)" onclick="scrollToDownload()">
                             <i class="material-icons">cloud_download</i> Download
                         </a>
@@ -66,7 +65,7 @@
                         <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.instagram.com/CreativeTimOfficial" target="_blank" data-original-title="Follow us on Instagram">
                             <i class="fa fa-instagram"></i>
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -78,8 +77,8 @@
                     <h1 class="title">Your Story Starts With Us.</h1>
                     <h4>Every landing page needs a small description after the big bold title, that&apos;s why we added this text here. Add here all the information that can make you or your product create the first impression.</h4>
                     <br>
-                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="btn btn-danger btn-raised btn-lg">
-                        <i class="fa fa-play"></i> Watch video
+                    <a href="#contact" class="btn btn-danger btn-raised btn-lg">
+                        <i class="fa fa-play"></i> Contact Us
                     </a>
                 </div>
             </div>
@@ -90,7 +89,7 @@
             <div class="section text-center">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
-                        <h2 class="title">Let&apos;s talk product</h2>
+                        <h2 class="title">Services</h2>
                         <h5 class="description">This is the paragraph where you can write more details about your product. Keep you user engaged by providing meaningful information. Remember that by this time, the user is curious, otherwise he wouldn&apos;t scroll to get here. Add a button if you want the user to see more.</h5>
                     </div>
                 </div>
@@ -101,7 +100,7 @@
                                 <div class="icon icon-info">
                                     <i class="material-icons">chat</i>
                                 </div>
-                                <h4 class="info-title">Free Chat</h4>
+                                <h4 class="info-title">Cloud Computing</h4>
                                 <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p>
                             </div>
                         </div>
@@ -110,7 +109,7 @@
                                 <div class="icon icon-success">
                                     <i class="material-icons">verified_user</i>
                                 </div>
-                                <h4 class="info-title">Verified Users</h4>
+                                <h4 class="info-title">Software Engineering</h4>
                                 <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p>
                             </div>
                         </div>
@@ -119,14 +118,15 @@
                                 <div class="icon icon-danger">
                                     <i class="material-icons">fingerprint</i>
                                 </div>
-                                <h4 class="info-title">Fingerprint</h4>
+                                <h4 class="info-title">Project Management</h4>
                                 <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="section text-center">
+
+            <!-- <div class="section text-center">
                 <h2 class="title">Here is our team</h2>
                 <div class="team">
                     <div class="row">
@@ -197,13 +197,17 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="section section-contacts">
+            </div> -->
+
+
+            <div class="section section-contacts" id="contact">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
                         <h2 class="text-center title">Work with us</h2>
                         <h4 class="text-center description">Divide details about your product or agency work into parts. Write a few lines about each one and contact us about any further collaboration. We will responde get back to you in a couple of hours.</h4>
-                        <form class="contact-form">
+
+
+                        <!-- <form class="contact-form">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
@@ -229,7 +233,7 @@
                                     </button>
                                 </div>
                             </div>
-                        </form>
+                        </form> -->
                     </div>
                 </div>
             </div>
@@ -237,7 +241,7 @@
     </div>
     <footer class="footer ">
         <div class="container">
-            <nav class="pull-left">
+            <!-- <nav class="pull-left">
                 <ul>
                     <li>
                         <a href="https://www.creative-tim.com">
@@ -260,13 +264,14 @@
                         </a>
                     </li>
                 </ul>
-            </nav>
+            </nav> -->
             <div class="copyright pull-right">
                 &copy;
+                <b>
                 <script>
                     document.write(new Date().getFullYear())
-                </script>, made with <i class="material-icons">favorite</i> by
-                <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
+                </script></b>, made with <i class="material-icons">favorite</i> in
+                <a href="https://www.creative-tim.com" target="_blank">Lagos, Nigeria</a> for a better web.
             </div>
         </div>
     </footer>
@@ -282,8 +287,7 @@
     <script src="assets/js/plugins/nouislider.min.js"></script>
     <!-- Material Kit Core initialisations of plugins and Bootstrap Material Design Library -->
     <script src="assets/js/material-kit.js?v=2.0.2"></script>
-    <!-- Fixed Sidebar Nav - js With initialisations For Demo Purpose, Don't Include it in your project -->
-    <script src="assetsassets-for-demo/js/material-kit-demo.js"></script>
+
 </body>
 
 </html>
