--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
-                    <li class="dropdown nav-item">
+                    <!-- <li class="dropdown nav-item">
                         <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
                             <i class="material-icons">apps</i> Components
                         </a>
@@ -45,7 +45,8 @@
                                 <i class="material-icons">content_paste</i> Documentation
                             </a>
                         </div>
-                    </li>
+                    </li> -->
+                    
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="javascript:void(0)" onclick="scrollToDownload()">
                             <i class="material-icons">cloud_download</i> Download
