--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             </a>
                         </div>
                     </li> -->
-                    
+
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="javascript:void(0)" onclick="scrollToDownload()">
                             <i class="material-icons">cloud_download</i> Download
@@ -90,7 +90,7 @@
             <div class="section text-center">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
-                        <h2 class="title">Services</h2>
+                        <h1 class="title">Services</h1>
                         <h5 class="description">This is the paragraph where you can write more details about your product. Keep you user engaged by providing meaningful information. Remember that by this time, the user is curious, otherwise he wouldn&apos;t scroll to get here. Add a button if you want the user to see more.</h5>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                                 <div class="icon icon-info">
                                     <i class="material-icons">chat</i>
                                 </div>
-                                <h4 class="info-title">Cloud Computing</h4>
+                                <h3 class="info-title">Cloud Computing</h3>
                                 <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p>
                             </div>
                         </div>
@@ -110,7 +110,7 @@
                                 <div class="icon icon-success">
                                     <i class="material-icons">verified_user</i>
                                 </div>
-                                <h4 class="info-title">Software Engineering</h4>
+                                <h3 class="info-title">Software Engineering</h3>
                                 <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                                 <div class="icon icon-danger">
                                     <i class="material-icons">fingerprint</i>
                                 </div>
-                                <h4 class="info-title">Project Management</h4>
+                                <h3 class="info-title">Project Management</h3>
                                 <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p>
                             </div>
                         </div>
@@ -205,7 +205,7 @@
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
                         <h2 class="text-center title">Work with us</h2>
-                        <h4 class="text-center description">Divide details about your product or agency work into parts. Write a few lines about each one and contact us about any further collaboration. We will responde get back to you in a couple of hours.</h4>
+                        <h4 class="text-center description">Want us to be part of your success journey? contact <a href="mailto:abdul@neonprojects.co"><b>Abdulwahab (abdul@neonprojects.co)</b></a> or <a href="mailto:olaitan@neonprojects.co"><b>Olaitan (olaitan@neonprojects.co)</b></a></h4>
 
 
                         <!-- <form class="contact-form">
