--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h1 class="title">Your Story Starts With Us.</h1>
-                    <h4>Every landing page needs a small description after the big bold title, that&apos;s why we added this text here. Add here all the information that can make you or your product create the first impression.</h4>
+                    <h1 class="title">Technology Consultancy Services</h1>
+                    <h4>We help our clients reach their goals with the necessary technical solutions and services.</h4>
                     <br>
                     <a href="#contact" class="btn btn-danger btn-raised btn-lg">
-                        <i class="fa fa-play"></i> Contact Us
+                        <!-- <i class="fa fa-play"></i> -->
+                        <i class="material-icons">contact_phone</i> <b>Contact Us</b>
                     </a>
                 </div>
             </div>
@@ -91,18 +92,46 @@
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
                         <h1 class="title">Services</h1>
-                        <h5 class="description">This is the paragraph where you can write more details about your product. Keep you user engaged by providing meaningful information. Remember that by this time, the user is curious, otherwise he wouldn&apos;t scroll to get here. Add a button if you want the user to see more.</h5>
+                        <h5 class="description">NeonProjects has succeded in providing valuable technology services and solutions to aid business and organisational productivity to clients of diverse industries.</h5>
                     </div>
                 </div>
                 <div class="features">
                     <div class="row">
                         <div class="col-md-4">
                             <div class="info">
+                                <div class="icon icon-success">
+                                    <!-- <i class="material-icons">chat</i> -->
+                                    <i class="material-icons">playlist_add_check</i>
+                                </div>
+                                <h3 class="info-title">Project Management</h3>
+                                <!-- <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p> -->
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="info">
+                                <div class="icon icon-primary">
+                                    <i class="material-icons">insert_chart</i>
+                                </div>
+                                <h3 class="info-title">Business Analysis</h3>
+                                <!-- <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p> -->
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="info">
                                 <div class="icon icon-info">
-                                    <i class="material-icons">chat</i>
+                                    <i class="material-icons">code</i>
+                                </div>
+                                <h3 class="info-title">Software Engineering</h3>
+                                <!-- <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p> -->
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="info">
+                                <div class="icon icon-danger">
+                                    <i class="material-icons">cloud</i>
                                 </div>
                                 <h3 class="info-title">Cloud Computing</h3>
-                                <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p>
+                                <!-- <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p> -->
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -110,17 +139,18 @@
                                 <div class="icon icon-success">
                                     <i class="material-icons">verified_user</i>
                                 </div>
-                                <h3 class="info-title">Software Engineering</h3>
-                                <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p>
+                                <h3 class="info-title">Cyber Security</h3>
+                                <!-- <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p> -->
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="info">
-                                <div class="icon icon-danger">
-                                    <i class="material-icons">fingerprint</i>
+                                <div class="icon icon-primary">
+                                    <!-- <i class="material-icons">chat</i> -->
+                                    <i class="material-icons">perm_data_setting</i>
                                 </div>
-                                <h3 class="info-title">Project Management</h3>
-                                <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p>
+                                <h3 class="info-title">Solutions Architecture</h3>
+                                <!-- <p>Divide details about your product or agency work into parts. Write a few lines about each one. A paragraph describing a feature will be enough.</p> -->
                             </div>
                         </div>
                     </div>
@@ -205,7 +235,7 @@
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
                         <h2 class="text-center title">Work with us</h2>
-                        <h4 class="text-center description">Want us to be part of your success journey? contact <a href="mailto:abdul@neonprojects.co"><b>Abdulwahab (abdul@neonprojects.co)</b></a> or <a href="mailto:olaitan@neonprojects.co"><b>Olaitan (olaitan@neonprojects.co)</b></a></h4>
+                        <h4 class="text-center description">Want us to be part of your journey to success?<br>Contact <a href="mailto:abdul@neonprojects.co"><b>Abdulwahab (abdul@neonprojects.co)</b></a> or <a href="mailto:olaitan@neonprojects.co"><b>Olaitan (olaitan@neonprojects.co)</b></a></h4>
 
 
                         <!-- <form class="contact-form">
