--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 <script>
                     document.write(new Date().getFullYear())
                 </script></b>, made with <i class="material-icons">favorite</i> in
-                <a href="https://www.creative-tim.com" target="_blank">Lagos, Nigeria</a> for a better web.
+                <a href="#">Lagos, Nigeria</a> for a better web.
             </div>
         </div>
     </footer>
